# bitsparrow-rust

./: Cargo.toml  README.md
benches/: lib.rs
bitsparrow_derive/: Cargo.toml
bitsparrow_derive/src/: lib.rs
src/: LICENCE  decode.rs  encode.rs  lib.rs  utils.rs
tests/: derive.rs  lib.rs
