[package]
name = "bitsparrow"
version = "0.4.0"
authors = ["maciej.hirsz@gmail.com"]
description = "BitSparrow implementation in Rust"
homepage = "http://bitsparrow.io/"
documentation = "http://bitsparrow.io/doc/bitsparrow/"
repository = "https://github.com/bitsparrow/bitsparrow-rust"
license = "MIT"
