[package]
name = "bitsparrow"
version = "2.0.0alpha"
authors = ["maciej.hirsz@gmail.com"]
description = "BitSparrow implementation in Rust"
homepage = "http://bitsparrow.io/"
documentation = "http://bitsparrow.io/doc/bitsparrow/"
repository = "https://github.com/bitsparrow/bitsparrow-rust"
license = "MIT"
