[package]
name = "bitsparrow"
version = "2.0.0-rc4"
authors = ["maciej.hirsz@gmail.com"]
description = "BitSparrow implementation in Rust"
homepage = "http://bitsparrow.io/"
documentation = "http://bitsparrow.io/doc/bitsparrow/"
repository = "https://github.com/bitsparrow/bitsparrow-rust"
license = "MIT"
